Ahora con el main subido

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /TP 2-LP/x64/Debug
+/TP 2-LP/TP 2-LP/x64/Debug
+/TP 2-LP/.vs/TP 2-LP/v15/Browse.VC.opendb
